Segundo Commit Proyecto CorresponsApp. Avance Fase1